--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,24 +1,33 @@
-header{
-    width: 100%;
-    height: 70px;
-    box-shadow: 0 0 10px  black;
-    background-color:rgb(199, 190, 190);
+header {
+  width: 100%;
+  height: 70px;
+  box-shadow: 0 0 10px black;
+  background-color: rgb(199, 190, 190);
 }
 
-header nav{
-    max-width:85%;
-    height:100%;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
+header nav {
+  max-width: 85%;
+  height: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-header nav h1{
-    color: rgb(25, 33, 187);
+header nav h1 {
+  color: rgb(25, 33, 187);
 }
 
-header nav .avtar{
-    cursor: pointer;
+header nav .avtar {
+  cursor: pointer;
+}
+
+.page {
+  background: url(./background.jpeg);
+  height: 100vh;
+}
+.dashboard {
+  background: url(./walk.gif);
+  height: 100vh;
+  background-size: cover;
 }
